feat: delete, patch handlers
