# api/api.go
@@ -104,18 +104,28 @@ func (a *Application) Mount() http.Handler {
 				r.With(m.AuthTokenMiddleware).
 					Delete("/{exerciseID}/like", h.UnlikeExerciseHandler)
 				r.Get("/{userID}", h.GetUsersExercises)
+				r.With(m.AuthTokenMiddleware).Patch("/{exerciseID}", h.UpdateExerciseHandler)
+				r.With(m.AuthTokenMiddleware).Delete("/{exerciseID}", h.DeleteExerciseHandler)
 			})
 			r.Route("/workouts", func(r chi.Router) {
+				r.With(m.AuthTokenMiddleware).Post("/end", h.EndWorkoutHandler)
 				r.Get("/{workoutID}", h.GetWorkoutHandler)
-				r.Get("/{userID}", h.GetUserWorkouts)
+				r.Get("/user/{userID}", h.GetUserWorkouts)
 				r.With(m.AuthTokenMiddleware).Post("/", h.CreateWorkoutHandler)
 				r.With(m.AuthTokenMiddleware).Get("/", h.GetAllWorkouts)
 				r.With(m.AuthTokenMiddleware).Post("/{workoutID}/like", h.LikeWorkoutHandler)
 				r.With(m.AuthTokenMiddleware).Delete("/{workoutID}/like", h.UnlikeWorkoutHandler)
+				r.With(m.AuthTokenMiddleware).Patch("/{workoutID}", h.PatchWorkoutHandler)
+				r.With(m.AuthTokenMiddleware).Delete("/{workoutID}", h.DeleteWorkoutHandler)
 			})
 			r.Route("/reviews", func(r chi.Router) {
 				r.With(m.AuthTokenMiddleware).Post("/workout/{workoutID}", h.ReviewWorkoutHandler)
 				r.Get("/workout/{workoutID}", h.GetWorkoutReviewsHandler)
+
+				r.With(m.AuthTokenMiddleware).
+					Patch("/workout/{workoutID}", h.PatchWorkoutReviewHandler)
+				r.With(m.AuthTokenMiddleware).
+					Delete("/workout/{workoutID}", h.DeleteWorkoutReviewHandler)
 			})
 			r.Route("/nutrients", func(r chi.Router) {
 				r.With(m.AuthTokenMiddleware).
